--- a/pages/admin/Clients.module.css
+++ b/pages/admin/Clients.module.css
@@ -212,6 +212,7 @@
 }
 .clientListTitle{
   margin-top: 1rem;
+  color: #333;
 }
 /* Loading spinner styles */
 .loadingContainer {
